# flake8-puzzle

./: .pre-commit-config.yaml  README.md  flake8_puzzle.py  setup.cfg
tests/: puzzle_test.py
