[metadata]
name = flake8_puzzle
version = 0.0.0
description = flake8 plugin which finds function calls with string literals, just for fun
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkittner/flake8-flake8_puzzle
author = Jonas Kittner
author_email = jkittner@users.noreply.github.com
license = MIT
license_file = LICENCE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_puzzle
install_requires =
    flake8
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
flake8.extension =
    PUZ=flake8_puzzle:Plugin

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
